erDiagram
    Department ||--o{ Employee : "1:N (belongs_to)"
    Department ||--o| Employee : "1:1 (managed_by)"
    Employee ||--o{ Employee : "1:N (supervises)"
    Employee ||--|| ExtraEmployeeDetails : "1:1 (extension)"
    Employee ||--o{ Dependent : "1:N (has_dependent)"
    Employee ||--o{ Attendance : "1:N (logs_attendance)"
    Employee }|--|{ Shift : "M:N (works_shift)"

    Company ||--o{ Employee : "1:N (represented_by)"
    Company ||--o{ Company_Type : "1:N (has_type)"
    Company ||--o{ Company_Location : "1:N (located_at)"
    Company }|--|{ RawMaterial : "M:N (supplies)"
    
    PurchaseOrder }|--|| Department : "1:N (issued_by)"
    PurchaseOrder }|--|{ RawMaterial : "M:N [unit_price]"
    PurchaseOrder ||--|| PO_Company : "1:N [expected_completion]"
    PO_Company ||--|| OrderInvoice : "1:1 (invoiced)"

    Vehicle }|--|| Company : "1:N (owned_by)"
    Consignment }|--|| Vehicle : "1:N (shipped_via)"
    Consignment }|--|| Warehouse : "N:1 (delivered_to)"
    Consignment }|--|| PurchaseOrder : "1:N [expected_arrival_date]"
    Consignment }|--|{ RawMaterial : "M:N [qty_delivered]"

    Warehouse }|--|| Department : "1:N (managed_by)"
    Warehouse }|--|{ RawMaterial : "M:N [qty_stock]"
    Department }|--|{ RawMaterial : "M:N (uses)"

    ProductionOrder }|--|| Department : "1:N (planned_by)"
    ProductionOrder }|--|| FinalMaterial : "1:N [expected_qty_output]"
    ProductionOrder }|--|{ RawMaterial_Warehouse : "M:N [qty_required]"

    ProductionOrder ||--o{ PhaseExecution : "1:N (has_phase)"
    PhaseExecution }|--|| Department : "N:1 (executed_in)"
    PhaseExecution ||--o{ PhaseTimeLog : "1:N (logs_event)"
    PhaseExecution ||--o{ PhaseResourceConsumption : "1:N (consumes_resources)"
    PhaseResourceConsumption ||--o{ ResourceConsumed : "1:N (details)"

    PackingBatch }|--|| Department : "1:N (packed_in)"
    PackingBatch }|--o| PhaseExecution : "1:N [status]"
    PackingBatch ||--o{ FabricRoll : "1:N (contains_rolls)"
    FabricRoll }|--|| Warehouse : "N:1 [storage_rack]"
    FabricRoll }|--|| FinalMaterial : "1:N [qty_stored]"

    Worker }|--|| Employee : "N:1 (owned_by)"
    Worker }|--|{ Department : "M:N (assigned_dept)"
    WorkerDept_Shift }|--|| Worker_Department : "M:N [wages]"
    WorkerDept_Shift }|--|| Shift : "during"

    Worker }|--|{ PackingBatch : "M:N (assigned_batch)"
    WorkerPacking_Shift }|--|| Worker_PackingBatch : "M:N [wages]"
    WorkerPacking_Shift }|--|| Shift : "during"

    Worker }|--|{ Warehouse : "M:N (assigned_wh)"
    WorkerWarehouse_Shift }|--|| Worker_Warehouse : "M:N [wages]"
    WorkerWarehouse_Shift }|--|| Shift : "during"
